# cross-engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: CODEOWNERS
include/ce/: defs.hpp
include/ce/component/: camera.h  component.h  component3D.h  dynamic_mesh.h  light.h  parallel_light.h  point_light.h  skybox.h  static_mesh.h  visual_mesh.h
include/ce/event/: event.h  i_event_listener.h  window_event.h
include/ce/event_listener/: window_event_listener.h
include/ce/game/: game.h
include/ce/geometry/: a_geometry.h  polygon.h  triangle.h  vertex.h
include/ce/graphics/: graphics.h  window.h
include/ce/handlers/: input_handler.h
include/ce/managers/: event_manager.h  input_manager.h
include/ce/materials/: material.h  pbr_material.h  valued_material.h
include/ce/math/: interval.hpp  math.hpp  math_type_base.hpp  matrix.hpp  vector.hpp
include/ce/memory/: shared_ptr.hpp  unique_ptr.hpp
include/ce/resource/: resource.h
include/ce/texture/: static_texture.h  texture.h
include/ce/utils/: task.h
model/: Arm.mtl
shaders/: CMakeLists.txt  depth_shader_fragment.glsl  depth_shader_vertex.glsl  fragment.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex.glsl
src/component/: CMakeLists.txt  camera.cpp  component.cpp  dynamic_mesh.cpp  light.cpp  point_light.cpp  skybox.cpp  static_mesh.cpp  visual_mesh.cpp
src/engine/: CMakeLists.txt
src/engine/component/: CMakeLists.txt  camera.cpp  component.cpp  component3D.cpp  dynamic_mesh.cpp  light.cpp  parallel_light.cpp  point_light.cpp  skybox.cpp  static_mesh.cpp  visual_mesh.cpp
src/engine/event/: CMakeLists.txt  event.cpp  window_event.cpp
src/engine/game/: CMakeLists.txt  game.cpp
src/engine/geometry/: polygon.cpp  triangle.cpp  vertex.cpp
src/engine/graphics/: CMakeLists.txt  graphics.cpp  window.cpp
src/engine/graphics/renderer/: CMakeLists.txt  renderer.cpp
src/engine/graphics/shader/: a_shader.cpp  frag_shader.cpp  shader_program.cpp  vert_shader.cpp
src/engine/managers/: CMakeLists.txt  event_manager.cpp  input_manager.cpp
src/engine/materials/: CMakeLists.txt  material.cpp  pbr_material.cpp  valued_material.cpp
src/engine/math/: CMakeLists.txt
src/engine/resource/: resource.cpp
src/engine/texture/: CMakeLists.txt  static_texture.cpp  texture.cpp
src/engine/utils/: CMakeLists.txt  task.cpp
src/event/: CMakeLists.txt  event.cpp  window_event.cpp
src/event_listener/: CMakeLists.txt
src/game/: game.cpp
src/geometry/: CMakeLists.txt  a_geometry.cpp  polygon.cpp  triangle.cpp  vertex.cpp
src/graphics/: CMakeLists.txt  graphics.cpp  window.cpp
src/graphics/shader/: CMakeLists.txt  a_shader.cpp  shader_program.cpp
src/graphics/texture/: CMakeLists.txt  static_texture.cpp  texture.cpp
src/handlers/: CMakeLists.txt  input_handler.cpp
src/managers/: CMakeLists.txt  event_manager.cpp  input_manager.cpp
src/materials/: material.cpp  valued_material.cpp
src/resource/: CMakeLists.txt  resource.cpp
src/test/: CMakeLists.txt  test_main.cpp
src/test/test_component/: CMakeLists.txt  test_component.cpp
src/test/test_geometry/: CMakeLists.txt  test_geometry.cpp
src/test/test_math/: CMakeLists.txt  test_math.cpp
src/test/test_resource/: CMakeLists.txt  some_binary_file  test_resource.cpp
src/test/unit_test/: CMakeLists.txt  unit_test.cpp  unit_test.h
src/texture/: texture.cpp
src/thread/: CMakeLists.txt
src/user/: CMakeLists.txt  user_main.cpp
test_resource/: CMakeLists.txt
textures/: CMakeLists.txt
(+7 files in other folders)
