add_subdirectory(component)
add_subdirectory(event)
add_subdirectory(game)
add_subdirectory(geometry)
add_subdirectory(graphics)
add_subdirectory(managers)
add_subdirectory(materials)
add_subdirectory(math)
add_subdirectory(resource)
add_subdirectory(texture)

set(CE_SOURCES
    ${CE_SOURCES}
    PARENT_SCOPE)